# eo

./: CMakeLists.txt  README.md  build.sh  main.cpp  node.h  run_test.sh  utils.h
solution/: CMakeLists.txt  Duration.cpp  GAConfig.cpp  GAConfig.h  GAInit.cpp  GAInit.h  solution.cpp  solution.h
test_cases/: example0.txt  example1.txt  example2.txt  example3.txt  example4.txt  example5.txt  test_cases.h
